2013-01-19 - version 0.1:
   - Initial release
2013-03-04 - version 0.1.1:
   - Added URLEncode for non-ascii track strings
   - Fixed parseTweets function to allow new coordinates structure in API 1.1
2013-10-07 - version 0.2:
   - Modified parseTweets function to make it faster and more complete
   - Removed user/password http authentication
   - Filter by language
   - Better information messages (tweets and not kb)
   - Introduced option to close connection after a specified number of tweets
   - Other minor bugs
2013-11-30 - version 0.2.1:
   - Fixed bug in parseTweets function
   - More informative tweet counts in filterStream
2013-01-05 - version 0.3:
   - New CRAN release
2013-01-07 - version 0.3.1:
   - Fixed dependencies
2015-07-09 - version 0.3.2:
   - createOAuthToken does not require handshake   
2018-01-23 - version 0.4.0:
   - filterStream and others can create token automatically from list
   - parseTweets now uses ndjson to parse tweets faster
2018-05-16 - version 0.4.1:
   - removed break outside loop
   - fixed broken URLs in docs
2018-05-17 - version 0.4.2:
   - fixed issue with reverse dependencies